--- a/src/Pages/Advertising/Bannertab.css
+++ b/src/Pages/Advertising/Bannertab.css
@@ -1,37 +1,24 @@
-.dropdown-menu.show {
-  border: none !important;
-  position: absolute;
-  inset: 0px auto auto 0px;
-  transform: translate(0px, 29px) !important;
-  width: 100% !important;
-  
-}
-
-.nav-link {
-  padding-left: 15px !important;
-}
-
-.dropdown,
-.dropdown-center,
-.dropend,
-.dropstart,
-.dropup,
-.dropup-center {
-  /* padding-top: 10px !important; */
-  /* font-weight: 550 !important; */
-  /* color: #75818D !important; */
-  border-bottom: 1px solid #75818D26;
-}
-
+/* Adjustments for dropdown items */
 .dropdown-item {
   font-weight: 400 !important;
   color: #75818D !important;
-}
-.dropdown-menu.category-dropdown.show {
-  position: absolute;
-  top: calc(100% + 10px); /* Adjust this value to position it below the dropdown */
-  left: 0;
-  width: 100%;
+  padding: 0.5rem 1rem !important; /* Adjust padding as needed */
 }
 
+/* Adjustments for dropdown menu */
+.dropdown-menu {
+  width: 100% !important;
+}
 
+/* Adjustments for dropdown title */
+.dropdown-toggle::after {
+  margin-left: 0.5rem;
+}
+
+/* Additional styling for Clean Filter buttons */
+button.clean-filter {
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
